style.css
*{
    margin: 0;
    padding: 0;
}

.first-section{
    height: 100vh;
    width: 100vw;
    background-color: aliceblue;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}
h1{
    font-family: fantasy;
    font-size: 6rem;
    padding: 20px;
    /* position: absolute; */
}
.second-section{
    height: 100vh;
    width: 100vw;
    background-color: antiquewhite;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}
.third-section{
    height: 100vh;
    width: 100vw;
    background-color: azure;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

